fixed overlapping of sections

--- a/style.css
+++ b/style.css
@@ -95,15 +95,17 @@ html, body {
 /* section 2 */
 .top-links{
   display:inline-flex;
+  padding: 15px 0;
   gap:1rem;
 }
+
 .track-order{
-  margin-left:20rem;
+  margin-left: 10vw;
 }
 
 /* language dropdown  */
 .dropdown {
-  padding: 20px;
+  padding: 15px 0;
   position: relative;
   display: inline-block;
 
@@ -112,7 +114,7 @@ html, body {
 .dropbtn {
   background-color: transparent;
   color: white;
-  padding: 16px;
+  padding: 0 1rem;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -162,8 +164,9 @@ html, body {
 /* social-icons */
 .social-icons{
     display: flex;
-    margin:40px ;
-    gap: 25px;
+    align-items: center;
+
+    gap: 2vw;
     font-size: 1rem; 
 }
 
@@ -258,8 +261,12 @@ html, body {
   border-bottom-right-radius: 0.3rem;
 
 }
+.welcome-text{
+  padding: 15px;
 
+}
 .container{
+  
     display: flex;
     justify-content:flex-start;
     width: auto;
@@ -315,13 +322,16 @@ html, body {
 #icons{
   margin-left: 15px ;
 }
-.top-bar {
+
+
+/* .top-bar {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
     font-size: 14px;
     padding-bottom: 10px;
-  }
+  } */
 
  
 
@@ -580,11 +590,10 @@ display: flex;
 }
 
 .slider-track {
-    position: absolute;
+    /* position: absolute; */
+
     left: 0;
     top: 0;
-    width: 100%; /* 3 slides */
-    height: 100%;
     display: flex;
     transition: transform 0.5s ease-in-out;
 }
@@ -720,8 +729,6 @@ display: flex;
 /* shipping section 6 */
 
 .shipping{
-  height:auto;
-
   margin-bottom: 2px;
   display: flex;
   flex-wrap: wrap; 
@@ -729,7 +736,7 @@ display: flex;
   padding-bottom:1rem;
   padding-left: 20px;
   padding-right: 20px;
-  justify-content: flex-start;
+  
   border-top: 2px solid rgba(99, 93, 93, 0.129);
   border-bottom: 2px solid rgba(99, 93, 93, 0.129);
 }
